--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -4,8 +4,14 @@
 <title>Login - Football News</title>
 {% endblock meta %}
 
+
 {% block content %}
 <div class="bg-gray-50 w-full min-h-screen flex items-center justify-center p-8">
+  <button
+    onclick="showToast('Sample Title', 'This is a sample message for the toast notification.')"
+  >
+    Click to Show Toast
+  </button>
   <div class="max-w-md w-full">
     <div class="bg-white rounded-lg border border-gray-200 p-6 sm:p-8 form-style">
       <div class="text-center mb-8">
